--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="menu_report">Report issue</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">Switch theme</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
