--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Съобщаване за проблем</string>
     <string name="menu_export">Експортиране</string>
     <string name="menu_import">Импортиране</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">Смяна на темата</string>
     <string name="menu_pro">Професионална версия</string>
     <string name="menu_about">Относно</string>
