--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Nahlásit problém</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">Změnit téma</string>
     <string name="menu_pro">Pro verze</string>
     <string name="menu_about">O aplikaci</string>
