--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Rapoter fejl</string>
     <string name="menu_export">Ekspoter</string>
     <string name="menu_import">Importer</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">Skift Tema</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Om</string>
