--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">דווח תקלה</string>
     <string name="menu_export">ייצא</string>
     <string name="menu_import">ייבא</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">שינוי צבעי רקע</string>
     <string name="menu_pro">גירסת Pro</string>
     <string name="menu_about">אודות</string>
