--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">問題を報告</string>
     <string name="menu_export">エクスポート</string>
     <string name="menu_import">インポート</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">テーマを切り替え</string>
     <string name="menu_pro">Proバージョン</string>
     <string name="menu_about">アプリ情報</string>
