--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Báo cáo lỗi</string>
     <string name="menu_export">Xuất</string>
     <string name="menu_import">Nhập</string>
+    <string name="menu_submit">Submit restrictions</string>
     <string name="menu_theme">Đổi giao diện</string>
     <string name="menu_pro">Phiên bản Pro</string>
     <string name="menu_about">Về XPrivacy</string>
