--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -14,7 +14,7 @@
     <string name="menu_report">問題を報告</string>
     <string name="menu_export">エクスポート</string>
     <string name="menu_import">インポート</string>
-    <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_submit">制限状況を投稿</string>
     <string name="menu_theme">テーマを切り替え</string>
     <string name="menu_pro">Proバージョン</string>
     <string name="menu_about">アプリ情報</string>
@@ -58,7 +58,7 @@
     <string name="restrict_view">表示 (ブラウザ)</string>
     <string name="title_category">カテゴリ:</string>
     <string name="title_restrict">チェックで制限:</string>
-    <string name="settings_serial">シリアルナンバー</string>
+    <string name="settings_serial">シリアル番号</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">経度</string>
     <string name="settings_mac">MAC アドレス</string>
