Update Polish transtaltion

--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -14,7 +14,7 @@
     <string name="menu_report">Zgłoś problem</string>
     <string name="menu_export">Eksport</string>
     <string name="menu_import">Import</string>
-    <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_submit">Wyślij restrykcje</string>
     <string name="menu_theme">Zmień motyw</string>
     <string name="menu_pro">Wersja Pro</string>
     <string name="menu_about">O programie</string>
