Option to set network/SIM operator name

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -64,6 +64,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="settings_phone">Telefonní číslo</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Země</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">Filtrovat dle oprávnění</string>
     <string name="settings_fsystem">Nezobrazovat systémové aplikace</string>
