--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -64,6 +64,7 @@
     <string name="settings_phone">Numer telefonu</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Kraj</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filtruj według uprawnień</string>
     <string name="settings_fsystem">Filtruj aplikacje systemowe</string>
