--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -64,6 +64,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_phone">رقم الهاتف</string>
     <string name="settings_id">هوية اندرويد</string>
     <string name="settings_country">الدولة</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">تصفية بواسطة الأُذونات</string>
     <string name="settings_fsystem">فلترة برامج النظام</string>
