--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -64,6 +64,7 @@
     <string name="settings_phone">Телефонен номер</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Държава</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Абонатно ID</string>
     <string name="settings_fpermission">Филтриране по разрешения</string>
     <string name="settings_fsystem">Филтриране на системни приложения</string>
