--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -62,6 +62,7 @@
     <string name="settings_phone">Número de telèfon</string>
     <string name="settings_id">ID d\'Android</string>
     <string name="settings_country">País</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">ID de subscriptor</string>
     <string name="settings_fpermission">Filta per permís</string>
     <string name="settings_fsystem">Filtra aplicacions de sistema</string>
