--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -64,6 +64,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="settings_phone">Αριθμός τηλεφώνου</string>
     <string name="settings_id">Αναγνωριστικό android</string>
     <string name="settings_country">Χώρα</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Αναγνωριστικό συνδρομητή</string>
     <string name="settings_fpermission">Φιλτράρισμα ανά άδεια</string>
     <string name="settings_fsystem">Φιλτράρισμα εφαρμογών συστήματος</string>
