--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -64,6 +64,7 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_phone">Telefoonnummer</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Land</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Abonnee ID</string>
     <string name="settings_fpermission">Filter op rechten</string>
     <string name="settings_fsystem">Filter systeem applicaties</string>
