--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -64,6 +64,7 @@
     <string name="settings_phone">Номер телефона</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Страна</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Фильтровать по разрешениям</string>
     <string name="settings_fsystem">Скрывать системные приложения</string>
