--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -64,6 +64,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="settings_phone">Telefonnummer</string>
     <string name="settings_id">Android-ID</string>
     <string name="settings_country">Land</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Abonnent-ID</string>
     <string name="settings_fpermission">Filtrera efter behörighet</string>
     <string name="settings_fsystem">Filtrera systemappar</string>
