--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -63,6 +63,7 @@
     <string name="settings_phone">Telefon numarası</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Ülke</string>
+    <string name="settings_operator">Operator</string>
     <string name="settings_subscriber">Sim Numarası (IMSI)</string>
     <string name="settings_fpermission">İzne göre filtre et</string>
     <string name="settings_fsystem">Sistem uygulamalarını gösterme</string>
