--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -64,7 +64,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_phone">Telefono numeris</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Šalis</string>
-    <string name="settings_operator">Operator</string>
+    <string name="settings_operator">Operatorius</string>
     <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_fpermission">Tik naudojami leidimai</string>
     <string name="settings_fsystem">Nerodyti sistemos programų</string>
