--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -64,7 +64,7 @@
     <string name="settings_phone">手机号码</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">国家</string>
-    <string name="settings_operator">Operator</string>
+    <string name="settings_operator">运营商</string>
     <string name="settings_subscriber">IMSI</string>
     <string name="settings_fpermission">隐藏无关权限</string>
     <string name="settings_fsystem">隐藏系统应用</string>
