Revert "Remove submit"
This reverts commit d6581a22e30a6f270e3b987b84e4d5ba2c3ac05a.

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Signaler un problème</string>
     <string name="menu_export">Exporter</string>
     <string name="menu_import">Importer</string>
+    <string name="menu_submit">Envoyer ses restrictions</string>
     <string name="menu_theme">Changer de thème</string>
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
