Menu to clear all application restrictions

--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Професионална версия</string>
     <string name="menu_about">Относно</string>
     <string name="menu_all">Всички</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Пусни</string>
     <string name="menu_app_settings">Настройки</string>
     <string name="menu_app_store">Google Play магазин</string>
