--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro verze</string>
     <string name="menu_about">O aplikaci</string>
     <string name="menu_all">Vše</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Spustit</string>
     <string name="menu_app_settings">Nastavení</string>
     <string name="menu_app_store">Obchod Play</string>
