--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">גירסת Pro</string>
     <string name="menu_about">אודות</string>
     <string name="menu_all">בחר הכול</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">הפעל</string>
     <string name="menu_app_settings">הגדרות</string>
     <string name="menu_app_store">חנות Google Play</string>
