--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Wersja Pro</string>
     <string name="menu_about">O programie</string>
     <string name="menu_all">Wszystko</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Uruchom</string>
     <string name="menu_app_settings">Ustawienia</string>
     <string name="menu_app_store">Play Store</string>
