--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Про верзија</string>
     <string name="menu_about">О</string>
     <string name="menu_all">Све</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Покрени</string>
     <string name="menu_app_settings">Подешавања</string>
     <string name="menu_app_store">Продавница Плеј</string>
