--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro verzió</string>
     <string name="menu_about">Névjegy</string>
     <string name="menu_all">Minden</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Indítás</string>
     <string name="menu_app_settings">Beállítások</string>
     <string name="menu_app_store">Play Store</string>
