--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro versjon</string>
     <string name="menu_about">Om</string>
     <string name="menu_all">Alle</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Kjør</string>
     <string name="menu_app_settings">Innstillinger</string>
     <string name="menu_app_store">Play Store</string>
