--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro versie</string>
     <string name="menu_about">Over</string>
     <string name="menu_all">Alles</string>
+    <string name="menu_clear">Wissen</string>
     <string name="menu_app_launch">Uitvoeren</string>
     <string name="menu_app_settings">Instellingen</string>
     <string name="menu_app_store">Play Store</string>
