--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro-версия</string>
     <string name="menu_about">О программе</string>
     <string name="menu_all">Выделить все</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Запустить приложение</string>
     <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
