--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro različica</string>
     <string name="menu_about">O programu</string>
     <string name="menu_all">Vse</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Zaženi</string>
     <string name="menu_app_settings">Nastavitve</string>
     <string name="menu_app_store">Trgovina Play</string>
