--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_pro">Pro versiyon</string>
     <string name="menu_about">Hakkında</string>
     <string name="menu_all">Tümü</string>
+    <string name="menu_clear">Clear</string>
     <string name="menu_app_launch">Çalıştır</string>
     <string name="menu_app_settings">Ayarlar</string>
     <string name="menu_app_store">Play Store</string>
