--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -14,12 +14,12 @@
     <string name="menu_report">报告问题</string>
     <string name="menu_export">导出配置</string>
     <string name="menu_import">导入配置</string>
-    <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_submit">共享规则</string>
     <string name="menu_theme">切换主题</string>
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
     <string name="menu_all">全部</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">清除</string>
     <string name="menu_app_launch">启动</string>
     <string name="menu_app_settings">设置</string>
     <string name="menu_app_store">Play 商店</string>
