--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -14,12 +14,12 @@
     <string name="menu_report">Problem melden</string>
     <string name="menu_export">Export der Einst.</string>
     <string name="menu_import">Import der Einst.</string>
-    <string name="menu_submit">Einschränkungen übermitteln</string>
+    <string name="menu_submit">Einschränkungen speichern</string>
     <string name="menu_theme">Theme wechseln</string>
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
     <string name="menu_all">Alles</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Säubern</string>
     <string name="menu_app_launch">Starte App</string>
     <string name="menu_app_settings">Zeige App-Info</string>
     <string name="menu_app_store">Play Store</string>
