--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -6,7 +6,7 @@
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Użycie</string>
+    <string name="menu_usage">Log użycia</string>
     <string name="menu_refresh">Odśwież</string>
     <string name="menu_settings">Ustawienia</string>
     <string name="menu_template">Szablon</string>
@@ -19,7 +19,7 @@
     <string name="menu_pro">Wersja Pro</string>
     <string name="menu_about">O programie</string>
     <string name="menu_all">Wszystko</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Wyczyść</string>
     <string name="menu_app_launch">Uruchom</string>
     <string name="menu_app_settings">Ustawienia</string>
     <string name="menu_app_store">Play Store</string>
@@ -51,7 +51,7 @@
     <string name="restrict_media">Media (audio, foto, wideo)</string>
     <string name="restrict_messages">Wiadomości (SMS, MMS)</string>
     <string name="restrict_network">Sieć (adresy)</string>
-    <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_notifications">Powiadomienia</string>
     <string name="restrict_phone">Telefon (ID, numery, połączenia)</string>
     <string name="restrict_storage">Storage (media, karta SD)</string>
     <string name="restrict_shell">Powłoka (polecenia, superuser)</string>
