--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -14,12 +14,12 @@
     <string name="menu_report">Reportar problemas</string>
     <string name="menu_export">Exportar</string>
     <string name="menu_import">Importar</string>
-    <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_submit">Enviar restrições</string>
     <string name="menu_theme">Mudar o tema</string>
     <string name="menu_pro">Versão Pro</string>
     <string name="menu_about">Sobre</string>
     <string name="menu_all">Tudo</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Limpar</string>
     <string name="menu_app_launch">Iniciar</string>
     <string name="menu_app_settings">Definições</string>
     <string name="menu_app_store">Play Store</string>
@@ -32,7 +32,7 @@
     <string name="msg_edit">Clique no ícone da aplicação para editar todas as restrições</string>
     <string name="msg_sure">Tem a certeza?</string>
     <string name="msg_done">Concluído</string>
-    <string name="msg_reboot">É necessário reiniciar</string>
+    <string name="msg_reboot">É necessário reiniciar o dispositivo</string>
     <string name="msg_random">Aleatório</string>
     <string name="msg_random_boot">Aleatório depois de iniciar</string>
     <string name="msg_first"><b>A aplicação XPrivacy foi desenvolvida e testada com todo o cuidado, 
@@ -66,7 +66,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_phone">Número de telefone</string>
     <string name="settings_id">Identidade do Android</string>
     <string name="settings_country">País</string>
-    <string name="settings_operator">Operator</string>
+    <string name="settings_operator">Operador</string>
     <string name="settings_subscriber">Identidade do subscritor</string>
     <string name="settings_fpermission">Filtrar por permissão</string>
     <string name="settings_fsystem">Filtrar aplicações do sistema</string>
