--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -14,12 +14,12 @@
     <string name="menu_report">Сообщить об ошибке</string>
     <string name="menu_export">Экспорт настроек</string>
     <string name="menu_import">Импорт настроек</string>
-    <string name="menu_submit">Submit restrictions</string>
+    <string name="menu_submit">Отправить разрешения</string>
     <string name="menu_theme">Переключить тему</string>
     <string name="menu_pro">Pro-версия</string>
     <string name="menu_about">О программе</string>
     <string name="menu_all">Выделить все</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Очистить</string>
     <string name="menu_app_launch">Запустить приложение</string>
     <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
